add detail of transaction

--- a/src/main/resources/META-INF/resources/index.css
+++ b/src/main/resources/META-INF/resources/index.css
@@ -184,6 +184,10 @@ a:hover, a:active { color: #c00; }
     }
 }
 
+.text-category{
+    font-weight: bold;
+}
+
 #button {
     margin-top: 10px;
     /*float: right;*/
