--- a/src/main/resources/META-INF/resources/index.css
+++ b/src/main/resources/META-INF/resources/index.css
@@ -173,6 +173,12 @@ a:hover, a:active { color: #c00; }
         padding: 1rem 0;
         grid-column: span 12;
     }
+
+    .text-white {
+        color: white;
+        font-size: 1.5rem;
+        padding: 0.5rem 0;
+    }
     .app-details {
         margin: 1rem 0;
         border: 1px solid lightgrey;
